@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Correctly link all regions to their parent. Warn if not found.
+Nicolas Weeger 2011-07-02
+
 Remove NEW_MATERIAL_CODE support.
 Nicolas Weeger 2011-06-29
 
